--- a/jobs/dbt_vivo/src/dbt_vivo/dbt_vivo_project/models/staging/stg_drugs.yml
+++ b/jobs/dbt_vivo/src/dbt_vivo/dbt_vivo_project/models/staging/stg_drugs.yml
@@ -9,5 +9,8 @@ models:
         tests:
           - not_null
           - unique
-
-     
+      - name: drug
+        description: "Unique name for the drug."
+        tests:
+          - not_null
+          - unique 
